<resources>
    <string name="app_name">WellHydrated</string>
    <string name="button_drink_water">Drink Water</string>
    <string name="label_water_left">You still have %d cups of water left!</string>
    <string name="toast_drink_water">You drank %dml of water!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="countdown">%s before next drink</string>
    <string name="app_description">Every day a poor man gets trapped at the bottom of a dry well.\n\nDrink, drink and drink to fill the well to rescue him.\n\nGet well hydrated, my friend.</string>
    <string name="history_title">Water Drinking History of </string>
    <string name="general_year_month">YYYY-MM</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_record_found">No record found.</string>
    <string-array name="stats_graph_types_array">
        <item>Daily Water Amount Drunk in the Past 7 Days</item>
        <item>Daily Water Amount Drunk in the Past 30 Days</item>
        <item>Avg. Daily Water Amount Drunk in the Past 12 Months</item>
    </string-array>

    <!-- Settings -->
    <string name="settings_general">General</string>
    <string name="theme">Change theme</string>
    <string name="theme_desc">Change the theme of the app to light or dark.</string>
    <string name="settings_testing">Testing functions</string>
    <string name="db_reset">Reset database</string>
    <string name="db_reset_desc">Reset database to a demo value for testing purposes.</string>
    <string name="cooldown">Cooldown</string>
    <string name="cooldown_desc">Disable cooldown for drinking water.</string>
    <string name="push_noti">Push notifications</string>
    <string name="push_noti_desc">Enable or disable push notifications.</string>
    <string-array name="pref_theme">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>